--- a/SmartDate1.vcxproj
+++ b/SmartDate1.vcxproj
@@ -129,6 +129,9 @@
   <ItemGroup>
     <ClCompile Include="SmartDate1.cpp" />
   </ItemGroup>
+  <ItemGroup>
+    <Text Include=".gitignore" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
