--- a/SmartDate1.vcxproj
+++ b/SmartDate1.vcxproj
@@ -132,6 +132,9 @@
   <ItemGroup>
     <Text Include=".gitignore" />
   </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="SmartDate1.h" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
