--- a/SmartDate1.vcxproj.filters
+++ b/SmartDate1.vcxproj.filters
@@ -24,4 +24,9 @@
       <Filter>Файлы ресурсов</Filter>
     </Text>
   </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="SmartDate1.h">
+      <Filter>Файлы заголовков</Filter>
+    </ClInclude>
+  </ItemGroup>
 </Project>
